nueva rama creada con comentario DEV para desarrollar

--- a/solami.html
+++ b/solami.html
@@ -60,6 +60,7 @@ Contiene codigo javascript, páginas en EJS y también en PUG. <br> En la parte 
         <p>Código: <br>
         <br>Aquí dejo el enlace al repositorio para que se le pueda echar un ojo al código.
         </p>
+        <!-- pesao -->
 
 
 
