--- a/formacion.html
+++ b/formacion.html
@@ -46,10 +46,11 @@
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
-                <p>FullStack Developer _I <br>
-                    Instituto de Formación Empresarial de la Cámara de Comercio de Madrid </p>
+                <p><span>FullStack Developer</span> <br>
+                    Febrero 2022 - Abril 2022 <br>
+                    Cámara de Comercio de Madrid <br>250 horas</p>
             </div>
-            <a class="botonBootcamp" href="pice.html"><span>Saber más</span></a>  
+            <a class="botonBootcamp" href="pice.html">Saber más</a>  
         </div>
     </div>
 
@@ -57,7 +58,8 @@
         <div class="fotoFormacion"> <img class="imgFormacion" src="images/itepFoto.jfif"/>
         </div>
         <div class="formacionYboton">
-            <div class="textoFormacion"><p> ITEP - DAM<br>Desarrollo de Aplicaciones Multiplataforma</p></div>
+            <div class="textoFormacion"><p> <span>ITEP - DAM </span><br>Desarrollo de Aplicaciones Multiplataforma<br>
+            Septiembre 2021 - febrero 2022</p></div>
             <a class="botonBootcamp" href="itep.html">Saber más</a>  
         </div>
     </div>
