--- a/pice.html
+++ b/pice.html
@@ -60,14 +60,13 @@
       </div>
       <div class="textoBootcamp">
         <p>La última parte de esta formación constitía en el desarrollo Web para Comercio Electrónico, es decir, la creación de páginas web de tienda virtual a través de Shopify. 
+        
+        <br><br>A continuación tengo el orgullo de mostrar mi diploma de la formación FullStack de la Cámara de Comercio de Madrid:
         </p>
 
      </div>
-     <div class="textoBootcamp">
-        <p>A continuación tengo el orgullo de mostrar mi diploma de la formación FullStack de la Cámara de Comercio de Madrid:
-        </p>
+        
 
-    </div>
 
     <div class="diplomasBootcamp">
         <!--         <img class="imgDiplomaBootcamp" src="images/Poirot Sanz Yann Victor Full Stack 04.22 TITULO (1)_page-0001.jpg"/>
