--- a/proyectos.html
+++ b/proyectos.html
@@ -36,7 +36,7 @@
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
-                <p><span>REACT - FullStack - Alquiler de coches</span> <br>Aplicación MERN<br>Mongo y SQL</p>
+                <p><span>FullStack <br> "Rentacar"</span> <br>Aplicación MERN<br>React, Mongo y SQL</p>
             </div>
             <a class="botonBootcamp" href="rentacar.html">Ver más</a>  
         </div>
@@ -47,9 +47,9 @@
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
-                <p><span>Proyecto FullBack - Empresa de mensajería</span> <br>>Mongo y SQL</p>
+                <p><span>FullBack<br>"Planet Express" </span> <br>Mongo y SQL</p>
             </div>
-            <a class="botonBootcamp" href="express.html"><span>Ver más</span></a>  
+            <a class="botonBootcamp" href="express.html">Ver más</a>  
         </div>
     </div>
 <!-- FULL FRONT cinema Paradiso-->
@@ -57,8 +57,8 @@
         <div class="fotoFormacion"> <img class="imgFormacion" src="images/cinemaParadiso.png"/>
         </div>
         <div class="formacionYboton">
-            <div class="textoFormacion"><p> Cinema Paradiso<br>Web de cine - API -FullFront</p></div>
-            <a class="botonBootcamp" href="cinemaParadiso.html">Saber más</a>  
+            <div class="textoFormacion"><p> <span>FullFront</span><br>"Cinema Paradiso"<br>Web de cine - API JavaScript</p></div>
+            <a class="botonBootcamp" href="cinemaParadiso.html">Ver más</a>  
         </div>
     </div>
 
@@ -68,9 +68,9 @@
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
-                <p>Instituto de Formación Empresarial de la Cámara de Comercio de Madrid </p>
+                <p>Formulario bancario 100% algoritmia </p>
             </div>
-            <a class="botonBootcamp" href="pice.html"><span>Ver más</span></a>  
+            <a class="botonBootcamp" href="banco.html"><span>Ver más</span></a>  
         </div>
     </div>
 
@@ -81,9 +81,9 @@
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
-                <p>Instituto de Formación Empresarial de la Cámara de Comercio de Madrid </p>
+                <p>Desafío Tripulaciones fin del curso </p>
             </div>
-            <a class="botonBootcamp" href="pice.html"><span>Ver más</span></a>  
+            <a class="botonBootcamp" href="tripulaciones.html"><span>Ver más</span></a>  
         </div>
     </div>
 
