--- a/proyectos.html
+++ b/proyectos.html
@@ -67,10 +67,9 @@
         <div class="fotoFormacion"><img class="imgFormacion" src="images/formularioAlgoritmiaBanco.png"/>
         </div>
         <div class="formacionYboton">
-            <div class="textoFormacion">                   
-                <p>Formulario bancario 100% algoritmia </p>
-            </div>
-            <a class="botonBootcamp" href="banco.html"><span>Ver más</span></a>  
+            <div class="textoFormacion"><p> <span>Formulario Banco</span><br>100% algoritmia</p></div>
+
+            <a class="botonBootcamp" href="banco.html">Ver más</a>  
         </div>
     </div>
 
@@ -81,7 +80,7 @@
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
-                <p>Desafío Tripulaciones fin del curso </p>
+               <span> <p>Desafío Tripulaciones fin del curso </p></span>
             </div>
             <a class="botonBootcamp" href="tripulaciones.html"><span>Ver más</span></a>  
         </div>
