--- a/express.html
+++ b/express.html
@@ -33,16 +33,14 @@
 
 <!-- bueno empieza -->
 <div class="contenedorGrandeBootcamp">
-    <!-- <div class="fotoBootcamp">
-        <img class="imgBootcamp" src="images/prueba.jpg"/>
-    </div> -->
+  
    
         <h1>
-              PLANET EXPRESS! </h1>
+              "PLANET EXPRESS" </h1>
     <div class="textoBootcamp">
         <p>
-            Tengo el placer de presentaros el proyecto FullBack hecho en grupo con 3 compañeros más. Contiene codigo javascript, páginas en EJS y también en PUG. <br> En la parte de Backend se ha utilziando tanto bases de datos relacionales como no relacionales (Mongo db Y MySQL) para distintos tipos de datos.
-            <br>En este primer video muestro la interfaz gráfica y sus funcionalidades.            <br>
+            Tengo el placer de presentaros el proyecto <span>Backend </span> hecho en grupo con 3 compañeros más. <span>Contiene codigo javascript</span>, páginas en <span>EJS </span>y también en <span>PUG.</span> <br> En la parte de Backend se ha utilziando tanto <span>bases de datos relacionales como no relacionales (Mongo db Y MySQL)</span> para distintos tipos de datos.
+            <br>            <br>
             Las tecnologías utilizadas son las siguientes:
         </p>
     </div>
@@ -64,6 +62,11 @@
      
       </div>
 
+
+      <div class="textoBootcamp">
+
+      <p>En este primer video muestro la interfaz <span>gráfica y sus funcionalidades</span>.</p>
+      </div>
       <!-- PONER EL VIDEO DE LA PAGINA WEB DE LA EXPOSICION -->
       <div class="fotos">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/75zIdymG_-I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
@@ -74,11 +77,11 @@
 
 
       <div class="textoBootcamp">
-        <p>En este proyecto puedo destacar de las bases de datos, el objetivo de este ejercicio es 
-         hacer CRUD total tanto en Mongo DB como en SQL (bases de datos no relacionales y relacionales.)
+        <p>En este proyecto puedo destacar de las <span>bases de datos</span>, el <span>objetivo de este ejercicio es 
+         hacer CRUD total tanto en Mongo DB como en SQL (bases de datos no relacionales y relacionales)</span>.
          <br>Según el tipo de dato irá a SQL o a Mongo DB. 
-         <br>Para hacer código de escritura, lectura, edición y eliminacion de datos se hizo una parte de cliente y otra parte adminstrador, donde el administrador tiene más capacidades que el cliente.
-         <br>Cabe destacar el uso de la librearía leaflet para el mapa geolocalizado, pudiendo ver la ruta del paquete enviado.
+         <br>Para hacer código de escritura, lectura, edición y eliminacion de datos <span>se hizo una parte de cliente y otra parte adminstrador</span>, donde el administrador tiene más capacidades y permisos que el cliente.
+         <br>Cabe destacar el uso de la <span>librearía leaflet para el mapa geolocalizado</span>, pudiendo ver la ruta del paquete enviado.
 
 
             
@@ -93,7 +96,7 @@
     </div>
 
      <div class="textoBootcamp">
-        <p>Para más detalles dejo aquí el enlace a GITHUB para poder ver el código en detalles:
+        <p>Para más detalles dejo aquí el enlace a <span>GITHUB </span>para poder ver el código en detalles:
             <a href="https://github.com/masugerencias/planetExpress.git">"Proyecto FullBack EJS PUG".</a>
         </p>
 
