poniendo enlaces a wp, mailito, linkedin

--- a/cinemaParadiso.html
+++ b/cinemaParadiso.html
@@ -32,7 +32,7 @@
 <div class="contenedorInicio2">
     <div class="textoYbotones">
         <p>CINEMA PARADISO <br>
-Tengo el placer de presentaros el proyecto FullfRONT hecho en grupo con 3 compañeros más. 
+Tengo el placer de presentaros el proyecto FrontEnd hecho en grupo con 3 compañeros más. 
         <br>En este primer video muestro la interfaz gráfica y sus funcionalidades.
         </p>
     </div>
