--- a/contacto.html
+++ b/contacto.html
@@ -48,9 +48,9 @@
 
         <div class="scrollmenuContacto">
             <a href="https://github.com/masugerencias"><img src="images/git.png" alt="github" /></a>
-            <a href="https://www.linkedin.com/in/yann-poirot-a1001711a/?trk=public-profile-join-page"><img src="images/linkedin.png" alt="linkedin" /></a>
-            <a href="#"><img src="images/wp.png" alt="whatsapplog" /></a>
-            <a href="#"><img src="images/gmail.png" alt="gmail" /></a>
+            <a href="https://www.linkedin.com/in/yann-poirot-a1001711a/?trk=public-profile-join-page"><img src="images/linkedin.png" alt="linkedin" /></a>          
+            <a href="https://api.whatsapp.com/send?phone=0034621016880&text=Acabo de ver tu web"><img src="images/wp.png" alt="whatsapplog"></a>
+            <a href="mailto:yannpoirot3@gmail.com?subject=He visto tu web"><img src="images/gmail.png" alt="gmail" /></a>
             <a href="#"><img src="images/iconoCV.png" alt="descargarCV" /></a>
 
             
@@ -61,9 +61,9 @@
         <div class="textoBootcamp">
             <p>
                 Puedes descargar mi CV desde aquí:<br></p>
+                <a href="/images/YANN_POIROT_CV.pdf" download="YANN_POIROT_CV.pdf">Descargar CV en pdf</a>
 
         </div>
-        <!-- DESCARGAR CV -->
 
        
 
