--- a/proyectos.html
+++ b/proyectos.html
@@ -47,7 +47,7 @@
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
-                <p><span>FullBack<br>"Planet Express" </span> <br>Mongo y SQL</p>
+                <p><span>FullStack<br>"Planet Express" </span> <br>Mongo y SQL</p>
             </div>
             <a class="botonBootcamp" href="express.html">Ver más</a>  
         </div>
@@ -57,7 +57,7 @@
         <div class="fotoFormacion"> <img class="imgFormacion" src="images/cinemaParadiso.png"/>
         </div>
         <div class="formacionYboton">
-            <div class="textoFormacion"><p> <span>FullFront</span><br>"Cinema Paradiso"<br>Web de cine - API JavaScript</p></div>
+            <div class="textoFormacion"><p> <span>FrontEnd</span><br>"Cinema Paradiso"<br>Web de cine - API JavaScript</p></div>
             <a class="botonBootcamp" href="cinemaParadiso.html">Ver más</a>  
         </div>
     </div>
