WP NO ME FUNCciona

--- a/proyectos.html
+++ b/proyectos.html
@@ -80,22 +80,14 @@
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
-               <span> <p>Desafío Tripulaciones fin del curso </p></span>
+                <p><span> "SABIOTEC" Desafío Tripulaciones fin del curso</span> 
+            <br>Trabajo final donde todas las filiales hacemos una misma app FullStack.</p>
             </div>
             <a class="botonBootcamp" href="tripulaciones.html"><span>Ver más</span></a>  
         </div>
     </div>
 
-    <div class="divFormacion">
-        <div class="fotoFormacion"><img class="imgFormacion" src="images/prueba.jpg"/>
-        </div>
-        <div class="formacionYboton">
-            <div class="textoFormacion">                   
-                <p>Instituto de Formación Empresarial de la Cámara de Comercio de Madrid </p>
-            </div>
-            <a class="botonBootcamp" href="pice.html"><span>Ver más</span></a>  
-        </div>
-    </div>
+   
    
  
 </div>
