--- a/proyectos.html
+++ b/proyectos.html
@@ -74,16 +74,16 @@
     </div>
 
 
-    <!-- Desafio tripulaciones  -->
+    <!-- Desafio Sabiotec  -->
     <div class="divFormacion">
-        <div class="fotoFormacion"><img class="imgFormacion" src="images/prueba.jpg"/>
+        <div class="fotoFormacion"><img class="imgFormacion" src="images/sabiotec.png"/>
         </div>
         <div class="formacionYboton">
             <div class="textoFormacion">                   
                 <p><span> "SABIOTEC" Desafío Tripulaciones fin del curso</span> 
             <br>Trabajo final donde todas las filiales hacemos una misma app FullStack.</p>
             </div>
-            <a class="botonBootcamp" href="tripulaciones.html"><span>Ver más</span></a>  
+            <a class="botonBootcamp" href="sabiotec.html"><span>Ver más</span></a>  
         </div>
     </div>
 
@@ -94,3 +94,7 @@
     <script src="./js/app.js"></script>
 </body>
 </html>
+
+
+
+
