--- a/contacto.html
+++ b/contacto.html
@@ -52,6 +52,10 @@
             <a target="_blank" href="https://api.whatsapp.com/send?phone=34621016880&text=Acabo de ver tu web"><img src="images/wp.png" alt="whatsapplog"></a>
             <a href="mailto:yannpoirot3@gmail.com?subject=He visto tu web"><img src="images/gmail.png" alt="gmail" /></a>
             <a target="_blank" href="/images/YANN_POIROT_CV.pdf" download="YANN_POIROT_CV.pdf"><img src="images/iconoCV.png" alt="descargarCV" /></a>
+<!--             <a href="tel:600123456">Contacto: 600123456</a> -->            
+            <a href="tel:621016880"><img src="images/tel.jpg" class="telefonoIcono" alt="llamar" /></a>
+
+
 
             
           
