--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="https://masugerencias.github.io/paginaPersonal/images/fotoPerfil.jpg">
+
 </head>
 
 <body>
