--- a/banco.html
+++ b/banco.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario Algoritmia</title>
+    <title>Banco</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="https://masugerencias.github.io/paginaPersonal/images/fotoPerfil.jpg">
 
