--- a/solami.html
+++ b/solami.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Express</title>
+    <title>Solami</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="https://masugerencias.github.io/paginaPersonal/images/fotoPerfil.jpg">
 
