--- a/banco.html
+++ b/banco.html
@@ -36,9 +36,9 @@
 
     <!-- bueno empieza -->
     <div class="contenedorGrandeBootcamp">
-        <!-- <div class="fotoBootcamp">
-        <img class="imgBootcamp" src="images/prueba.jpg"/>
-    </div> -->
+        <!-- <div class="contenedorFoto">
+        <img class="imgYannPoirot" src="images/perfil.jpg"/>
+    </div> bueno-->
 
         <h1>Formulario bancario algoritmia</h1>
         <div class="textoBootcamp">
