descarga CV rregladodo

--- a/contacto.html
+++ b/contacto.html
@@ -67,7 +67,8 @@
         <div class="textoBootcamp">
             <p>
                 Puedes descargar mi CV desde aquí:<br></p>
-                <a href="/images/YANN_POIROT_CV.pdf" download="YANN_POIROT_CV.pdf">Descargar CV en pdf</a>
+<!--                 <a href="/images/YANN_POIROT_CV.pdf" download="YANN_POIROT_CV.pdf">Descargar CV en pdf</a>
+ -->                <a target="_blank" href="images/YANN_POIROT_CV.pdf" download="Yann_PoirotCV">Descargar CV en pdf</a>
 
         </div>
 
